Expressed my feeling about git!

--- a/wdl.html
+++ b/wdl.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html>
     <head>
         <meta charset="UTF-8">
@@ -9,6 +8,7 @@
 
     </head>
     <body>
+	<label>git is lit!</label>
          <header class="showcase">
          <div class="showcase-top">
          <img src="logo2.png" alt="AnimeTv">
