Added Project Directories

--- a/wdl.html
+++ b/wdl.html
@@ -1,14 +1,15 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width , initial-scale=1.0">
+        <meta http-equiv=" X-UA-Compatible" content="ie=edge">
         <title>AnimeTv-Watch anime Online</title>
         <link rel="stylesheet" href="wdl.css">
-        <link rel="stylesheet" href="E:\Adu\wdl project\fontawesome-free-5.10.2-web\css\fontawesome.min.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.css">
 
     </head>
     <body>
-	<label>git is lit!</label>
          <header class="showcase">
          <div class="showcase-top">
          <img src="logo2.png" alt="AnimeTv">
@@ -18,28 +19,28 @@
                  <h1>See What's anime</h1>
                  <p>Watch Anime anywhere</p>
                  <a href="#" class="btn btn-xl">
-                     Watch free for 30 days <i class="fas fa-chevron-right btn-icon"></i>
+                     Watch free for 30 days <i class="fa fa-chevron-right btn-icon"></i>
                  </a>
              </div>
          </header>
+         
 
-         <section class="tabs">
+           <!-- <section class="tabs">  -->
              <div class="container">
                  <div id="tab-1" class="tab-item tab-border">
-                     <i class="fas fa-door-open fa-3x"></i>
+                     <i class="fas fa-door-open fa-3x " style="color:#999"></i>
                      <p class="hide-sm">Cancel Anytime</p>
                  </div>
                  <div id="tab-2" class="tab-item">
-                        <i class="fas fa-tablet-alt fa-3x"></i>
+                        <i class="fas fa-tablet-alt fa-3x" style="color:#999"></i>
                         <p class="hide-sm">Watch Anywhere</p>
-                </div>
-                <div id="tab-3" class="tab-item ">
-                        <i class="fas fa-tags fa-3x"></i>
+                 </div>
+                 <div id="tab-3" class="tab-item " >
+                        <i class="fas fa-tags fa-3x" style="color:#999"></i>
                         <p class="hide-sm">Pick your price</p>
                 </div>
-
-             </div>
-         </section>
+            </div>
+        <!-- </section>   -->
     </body>
 </html>
  
